# django-nuxt

./: README.md  db.sqlite3  package-lock.json  pyproject.toml
backend/: settings.py  urls.py
backend/core/: router.py
backend/core/migrations/: 0001_initial.py  0002_auto_20200707_2159.py
backend/core/models/: __init__.py  choice.py  question.py
backend/core/serializers/: __init__.py  choice.py  question.py
backend/core/views/: __init__.py  question.py
frontend/: nuxt.config.js  package-lock.json  package.json
frontend/.nuxt/: App.js  axios.js  client.js  index.js  router.js  routes.json  server.js  toast.js
frontend/.nuxt/auth/: plugin.js
frontend/layouts/: default.vue
frontend/pages/: login.vue  logout.vue
frontend/pages/admin/: question.vue
