[tool.poetry]
name = "django-nuxt-project"
version = "1.0.0"
description = "Um projeto de integraçao simples Django-Nuxt"
authors = ["Gustavo Barbosa Espindula"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
